make char codes work clean up